Added animations Finished

--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -18,7 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
-
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="280dp"
+            android:layout_height="280dp"
+            app:lottie_autoPlay="true"
+            android:scaleType="centerCrop"
+            app:lottie_fileName="infinity-spaghetti-loader.json"
+            app:lottie_loop="true"
+            />
 
         </LinearLayout>
 
