--- a/app/src/main/res/layout/fragment_fifths.xml
+++ b/app/src/main/res/layout/fragment_fifths.xml
@@ -18,7 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            app:lottie_autoPlay="true"
+            android:scaleType="centerCrop"
+            app:lottie_fileName="security.json"
+            app:lottie_loop="true"
 
+            />
 
         </LinearLayout>
 
