--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -21,11 +21,11 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lav_actionBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 app:lottie_autoPlay="true"
-                app:lottie_fileName="telegram-icon.json"
+                app:lottie_fileName="speedometer.json"
                 app:lottie_loop="true"
                 />
 
