--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -18,6 +18,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="260dp"
+                android:layout_height="260dp"
+                android:layout_marginBottom="80dp"
+                app:lottie_autoPlay="true"
+                android:scaleType="centerCrop"
+                app:lottie_fileName="gift-reward-animation.json"
+                app:lottie_loop="true"
+
+                />
 
 
         </LinearLayout>
